--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,47 @@
 body{
   margin: 0;
 }
+
 ul{
   padding: 0;
   margin: 0;  
   list-style: none;
 }
+
 img{
   display: block;
   max-width: 100%;
 }
+
 .slide{
   display: flex;
+}
+
+.slide:hover{
+  will-change: transform;
 }
 
 .wrapper{
   overflow: hidden;
 }
+
 .slide li{
   width: 80vw;
   flex-shrink: 0;
   max-width: 800px;
   margin: 0 20px;
+
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0, 2px, 4px rgba(0, 0, 0, .4);
+
+  opacity: .8;
+  transform: scale(.8);
+  transition: .4s;
+
+}
+
+.slide li.active{
+  opacity: 1;
+  transform: scale(1);
 }
